# AI-Models-Clone

./: .cursorrules  .detoxrc.js  .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .nvmrc  .prettierignore  .prettierrc  0.1.1  0.10.0  0.13.0  0.17.0  0.2.0  0.20.0  0.21.0  0.22.0  0.28.0  0.3.0  0.4.0  0.41.0  0.5.0  0.57.0  0.61.0  0.7.0  1.0.5  1.10.0  1.15.0  1.20.0  1.24.0  1.3.0  1.3.5  1.5.0  1.7.4  1.7.5  2.0.0  2.0.7  2.13.0  (+1515 more)
cursor_backend_clone/rust_core/: Cargo.toml  README.md  pyproject.toml
dermatology_ai/: .gitignore  .pip-requirements-update.bat  .pip-requirements-update.sh  .pre-commit-config.yaml  ADDITIONAL_FEATURES.md  ADVANCED_MODULE_SYSTEM.md  ADVANCED_PATTERNS.md  ADVANCED_TRAINING_GUIDE.md  ARCHITECTURE_ADVANCED_IMPROVEMENTS.md  ARCHITECTURE_BEST_PRACTICES.md  ARCHITECTURE_CODE_EXAMPLES.md  ARCHITECTURE_IMPLEMENTATION_CHECKLIST.md  ARCHITECTURE_IMPROVEMENTS_V8.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_MIGRATION_GUIDE.md  ARCHITECTURE_TROUBLESHOOTING.md  ARCHITECTURE_V6.md  ARCHITECTURE_V7_1_IMPROVED.md  ARCHITECTURE_V7_FINAL.md  CHANGELOG.md  COMPLETE_DEPENDENCIES_INDEX.md  COMPLETE_REFACTORED_CODE_OUTPUT.md  DEPENDENCIES_CHANGELOG.md  DEPENDENCIES_GUIDE.md  DEPENDENCIES_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENTERPRISE_FEATURES.md  FINAL_DEPENDENCIES_SUMMARY.md  FINAL_REFACTORED_CODE.py  FINAL_SUMMARY.md  HEXAGONAL_ARCHITECTURE.md  IMPROVEMENTS.md  IMPROVEMENTS_V6.md  INDEX_DEPENDENCIES.md  LIBRARIES_GUIDE.md  ML_IMPROVEMENTS.md  ML_IMPROVEMENTS_V2.md  MODULAR_ARCHITECTURE.md  (+36 more)
dermatology_ai/.github/: dependabot.yml
dermatology_ai/api/: __init__.py  dermatology_api.py  dermatology_api_modular.py  openapi_customization.py  openapi_extensions.py  service_definitions.py  services_locator.py  versioning.py
dermatology_ai/config/: model_config.yaml
dermatology_ai/core/: advanced_skin_analyzer.py  async_inference_engine.py  feature_flags.py  gradio_integration.py  middleware_config.py  ml_optimizer.py  module_loader.py  plugin_system.py  service_factory.py  skin_analyzer.py  skin_quality_metrics.py  startup.py  training.py
dermatology_ai/data/: __init__.py  augmentation.py  datasets.py  preprocessing.py  transforms.py
dermatology_ai/docs/: README.md
dermatology_ai/examples/: __init__.py  complete_training_example.py  gradio_demo_example.py  inference_example.py  record_storage_usage.py  refactored_training_example.py  training_example.py
dermatology_ai/frontend/: ABSOLUTE_FINAL_SUMMARY.md  COMPLETE_FINAL_SUMMARY.md  FINAL_IMPROVEMENTS.md  FINAL_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_V10.md  IMPROVEMENTS_V2.md  IMPROVEMENTS_V3.md  IMPROVEMENTS_V4.md  IMPROVEMENTS_V5.md  IMPROVEMENTS_V6.md  IMPROVEMENTS_V7.md  IMPROVEMENTS_V8.md  IMPROVEMENTS_V9.md  LATEST_IMPROVEMENTS.md  MORE_IMPROVEMENTS.md  README.md  ULTIMATE_FINAL_SUMMARY.md  ULTIMATE_IMPROVEMENTS.md  next.config.js  package.json  playwright.config.ts  tailwind.config.js
dermatology_ai/k8s/: deployment.yaml  ingress.yaml
dermatology_ai/middleware/: __init__.py  monitoring_middleware.py  rate_limit_middleware.py
dermatology_ai/ml/: README.md
dermatology_ai/mobile_app/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  ABSOLUTE_FINAL_SUMMARY.md  COMPLETE_FEATURES.md  COMPLETE_FINAL_SUMMARY.md  COMPLETE_ULTIMATE_FINAL.md  IMPROVEMENTS.md  LIBRARIES_QUICK_GUIDE.md  MODULAR_ARCHITECTURE.md  ULTIMATE_ABSOLUTE_FINAL_COMPLETE.md  ULTIMATE_COMPLETE_FINAL.md  ULTIMATE_FINAL_COMPLETE.md  ULTIMATE_IMPROVEMENTS.md  app.json  jest.setup.js  package.json  tsconfig.json
dermatology_ai/models/: base.py  vision_transformers.py
dermatology_ai/modules/: analysis_module.py  recommendation_module.py
dermatology_ai/plugins/: __init__.py  example_plugin.py
dermatology_ai/scripts/: all-checks.sh  analyze-dependencies.py  backup-requirements.sh  benchmark-install.sh  check-dependencies.sh  ci-check-dependencies.sh  cleanup-requirements.sh  compare-requirements.sh  dependency-dashboard.py  dependency-tree.py  deploy.sh  generate-requirements-report.sh  health_check.py  load_test.py  migrate-requirements.py  monitor-dependencies.sh  optimize-requirements.py  requirements-audit.sh  requirements-auto-fix.sh  requirements-check-compatibility.py  requirements-dependency-conflicts.py  requirements-deps-graph.py  requirements-diff.py  requirements-export.sh  requirements-health-score.py  requirements-integration-test.sh  requirements-master-check.sh  requirements-notify.sh  requirements-quick-scan.sh  requirements-size-analysis.sh  requirements-stats.sh  requirements-sync.sh  requirements-version-check.sh  restore-requirements.sh  run-api-debug.py  run-api.bat  run-api.sh  setup-dev-environment.sh  update-dependencies.sh  validate-requirements.py  (+1 more)
dermatology_ai/services/: __init__.py  admin_api.py  advanced_comparison.py  advanced_reporting.py  age_analysis.py  age_based_recommendations.py  analytics.py  api_documentation.py  auth_manager.py  batch_processor.py  benchmark_analysis.py  budget_based_recommendations.py  budget_recommendations.py  budget_tracker.py  business_metrics.py  community_features.py  (+45 more)
github_autonomous_agent/: .dockerignore  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  IMPROVEMENTS_DI_V2.md  IMPROVEMENTS_V12.md  IMPROVEMENTS_V21.md  IMPROVEMENTS_V23.md  IMPROVEMENTS_V26.md  IMPROVEMENTS_V27.md  IMPROVEMENTS_V5.md  IMPROVEMENTS_V6.md  IMPROVEMENTS_V8_CHANGELOG.md  IMPROVEMENTS_V8_EXECUTIVE_SUMMARY.md  IMPROVEMENTS_V8_FAQ.md  IMPROVEMENTS_V8_INDEX.md  IMPROVEMENTS_V8_SCRIPTS.md  IMPROVEMENTS_V8_TESTING_GUIDE.md  IMPROVEMENTS_V8_TROUBLESHOOTING.md  IMPROVEMENTS_V9_SUMMARY.md  LLM_COMPONENTS_SUMMARY.md  LLM_MIDDLEWARE_GUIDE.md  LLM_SERVICE.md  Makefile  QUICK_REFERENCE_V9.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_V2.md  REFACTORING_DI_COMPLETE.md  REFACTORING_EXCEPTIONS_COMPLETE.md  REFACTORING_LOGGING_COMPLETE.md  REFACTORING_SESSION_SUMMARY.md  REFACTORING_V9.md  REQUIREMENTS_GUIDE.md  REQUIREMENTS_IMPROVEMENTS.md  (+4 more)
(+35722 files in other folders)
