[package]
name = "cursor_agent_core"
version = "0.1.0"
edition = "2021"
authors = ["Cursor Agent Team <team@cursor.sh>"]
description = "High-performance Rust core for Cursor Agent - compression, encryption, batch processing, serialization"
license = "MIT"
readme = "README.md"
keywords = ["cursor", "performance", "compression", "crypto", "batch"]
categories = ["compression", "cryptography", "concurrency"]

[lib]
name = "cursor_agent_core"
crate-type = ["cdylib", "rlib"]

# ============================================
# Dependencies
# ============================================

[dependencies]
# Python bindings (PyO3)
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# ============================================
# Async Runtime
# ============================================
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync"] }
futures = "0.3"
async-trait = "0.1"

# ============================================
# Compression - High Performance
# ============================================
lz4 = "1.24"                    # Fastest compression
zstd = "0.13"                   # Best balance of speed/ratio
snap = "1.1"                    # Snappy - real-time compression
flate2 = "1.0"                  # gzip/zlib compatibility
brotli = "3.4"                  # Best ratio for text

# ============================================
# Cryptography - Secure and Fast
# ============================================
ring = "0.17"                   # Core crypto primitives
aes-gcm = "0.10"                # AES-GCM authenticated encryption
chacha20poly1305 = "0.10"       # Modern authenticated encryption
sha2 = "0.10"                   # SHA-256/512
sha3 = "0.10"                   # SHA-3
blake3 = "1.5"                  # Fastest secure hash
argon2 = "0.5"                  # Password hashing
ed25519-dalek = "2.1"           # Digital signatures
x25519-dalek = "2.0"            # Key exchange
rand = "0.8"                    # Random number generation
rand_chacha = "0.3"             # ChaCha RNG
hex = "0.4"                     # Hex encoding

# ============================================
# Serialization - Fastest Options
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"              # Standard JSON
simd-json = "0.13"              # SIMD-accelerated JSON (~3x faster)
rmp-serde = "1.1"               # MessagePack
bincode = "1.3"                 # Binary serialization
ciborium = "0.2"                # CBOR serialization

# ============================================
# Text Processing
# ============================================
unicode-segmentation = "1.10"   # Unicode-aware text handling
regex = "1.10"                  # Fast regex
aho-corasick = "1.1"            # Multi-pattern matching
memchr = "2.7"                  # SIMD string searching

# ============================================
# Parallel Processing
# ============================================
rayon = "1.8"                   # Data parallelism
crossbeam = "0.8"               # Concurrent data structures
crossbeam-channel = "0.5"       # Message passing
parking_lot = "0.12"            # Faster mutexes
dashmap = "5.5"                 # Concurrent hashmap
num_cpus = "1.16"               # CPU count detection

# ============================================
# ID Generation
# ============================================
uuid = { version = "1.7", features = ["v4", "v7", "fast-rng"] }
ulid = "1.1"                    # Sortable unique IDs
nanoid = "0.4"                  # URL-friendly IDs

# ============================================
# Time Handling
# ============================================
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# ============================================
# Error Handling
# ============================================
thiserror = "1.0"               # Error derive macros
anyhow = "1.0"                  # Error handling

# ============================================
# Logging & Tracing
# ============================================
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# ============================================
# Encoding
# ============================================
base64 = "0.22"
data-encoding = "2.5"

# ============================================
# URL Handling
# ============================================
url = "2.5"

# ============================================
# Numerics
# ============================================
num-traits = "0.2"
ordered-float = "4.2"

# ============================================
# Memory Efficiency
# ============================================
bytes = "1.5"
smallvec = "1.13"

# ============================================
# Development Dependencies
# ============================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
rand = "0.8"
proptest = "1.4"
tokio-test = "0.4"

# ============================================
# Features
# ============================================

[features]
default = []
simd = ["simd-json"]
full-crypto = ["argon2", "ed25519-dalek", "x25519-dalek"]
full = ["simd", "full-crypto"]

# ============================================
# Benchmarks
# ============================================

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false

# ============================================
# Profiles
# ============================================

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
