[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cursor_agent_core"
version = "0.1.0"
description = "High-performance Rust core for Cursor Agent - compression, encryption, batch processing, serialization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Cursor Agent Team", email = "team@cursor.sh" }
]
keywords = ["rust", "performance", "compression", "crypto", "batch", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/cursor/cursor-agent-core"
Documentation = "https://github.com/cursor/cursor-agent-core#readme"
Repository = "https://github.com/cursor/cursor-agent-core"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "cursor_agent_core.cursor_agent_core"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
