[package]
name = "faceless_video_core"
version = "0.1.0"
edition = "2021"
authors = ["Faceless Video AI Team"]
description = "High-performance Rust core for Faceless Video AI - video processing, encryption, and text processing"
license = "MIT"

[lib]
name = "faceless_video_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
futures = "0.3"

# Video/Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
imageproc = "0.24"

# Cryptography
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Text processing
unicode-segmentation = "1.10"
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
walkdir = "2.4"
tempfile = "3.10"

# FFmpeg bindings (optional, for direct video manipulation)
# ffmpeg-next = { version = "7.0", optional = true }

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[features]
default = []
ffmpeg = []

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3




