[package]
name = "faceless_video_enhanced"
version = "0.1.0"
edition = "2021"
authors = ["Faceless Video AI Team"]
description = "Enhanced Rust core for Faceless Video AI - video effects, color grading, transitions, and audio processing"
license = "MIT"

[lib]
name = "faceless_video_enhanced"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"

# Video/Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "dxt", "dds", "tga", "tiff", "bmp", "ico", "hdr", "pnm"] }
imageproc = "0.24"
ffmpeg-next = { version = "7.0", optional = true }
opencv = { version = "0.90", optional = true, default-features = false, features = ["opencv-4", "imgproc", "imgcodecs", "videoio", "video"] }

# Audio processing
rodio = "0.17"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# Color processing
palette = "0.7"
palette_extract = "0.1"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Math and algorithms
nalgebra = "0.32"
ndarray = { version = "0.16", features = ["rayon"] }
num-traits = "0.2"
num-complex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File handling
walkdir = "2.4"
tempfile = "3.10"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# System info
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = []
ffmpeg = ["ffmpeg-next"]
opencv = ["opencv"]
full = ["ffmpeg", "opencv"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
opt-level = 3












