[package]
name = "faceless_video_performance"
version = "0.1.0"
edition = "2021"
authors = ["Faceless Video AI Team"]
description = "High-performance Rust extensions for Faceless Video AI - video processing, audio DSP, and real-time effects"
license = "MIT"
readme = "README.md"

[lib]
name = "faceless_video_performance"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync"] }
futures = "0.3"
async-trait = "0.1"

# Image/Video processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
imageproc = "0.24"
fast_image_resize = "3.0"  # SIMD-accelerated image resizing
palette = "0.7"            # Color manipulation

# Audio processing (DSP)
dasp = "0.11"              # Digital Audio Signal Processing
rubato = "0.14"            # High-quality resampling
hound = "3.5"              # WAV reading/writing
symphonia = { version = "0.5", features = ["all"] }  # Audio decoding

# FFT for audio analysis
rustfft = "6.1"
realfft = "3.3"

# Video encoding/decoding helpers
# Note: FFmpeg bindings require system FFmpeg installation
# ffmpeg-next = { version = "7.0", optional = true }

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.5"

# Math and numerics
nalgebra = "0.32"          # Linear algebra
ndarray = "0.15"           # N-dimensional arrays
num-complex = "0.4"
num-traits = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# Base64 encoding
base64 = "0.22"

# Memory efficiency
bytes = "1.5"
smallvec = "1.13"

# Subtitle parsing
subparse = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
rand = "0.8"

[features]
default = []
ffmpeg = []
gpu = []  # Future GPU acceleration support

[[bench]]
name = "video_bench"
harness = false

[[bench]]
name = "audio_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
opt-level = 3












